Fix try-on upload/VTON flows and soften outfit advice tone.
Ensure anonymous session before photo upload, route avatar mode through VTON, and rewrite outfit explanations as natural two-paragraph stylist copy.